# KingAi_GPU_overclocker

./: .gitignore  LICENSE  README.md  pyproject.toml
kingai_gpu/: __init__.py
kingai_gpu/cli/: __init__.py  import_msi_profile_single.py  main.py  memtest.py  monitor.py  overclock.py
kingai_gpu/lib/: __init__.py  device_cache.py  nvapi.py  nvml.py
